# FL_IDS

./: .gitignore  ARCHITECTURE.md  JOURNAL.md  License  QUICK_START.md  README.md  START_AGISFL.bat  START_IDS.bat  app.py  package-lock.json  package.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements-312.txt  requirements.txt  requirements_production.txt  run_anywhere.py  run_backend.bat  start.py
backend/api/: API_REFERENCE.md  dashboard.py  datasets.py  federated_learning.py  integrations.py  network.py  security.py
backend/core/: __init__.py  auth.py  config.py  database.py  fl_engine.py  fl_schemas.py  ids_engine.py  monitoring.py  security.py  websocket.py
backend/tests/: test_main.py
datasets/: README.md
docs/: SEQUENCE_DIAGRAMS.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/deprecated/: README.md
frontend/electron/: main.js  preload.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AlertsList.tsx  ChartContainer.tsx  IntegrationStatus.tsx  MetricCard.tsx
frontend/src/hooks/: useRealTimeData.ts  useWebSocket.ts
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DatasetManager.tsx  FLAlgorithms.tsx  FederatedLearning.tsx  Integrations.tsx  NetworkMonitoring.tsx  SecurityCenter.tsx  Settings.tsx  (+1 more)
tests/: test_app.py  test_comprehensive.py  test_fl_metrics.py  test_healthz_readyz.py  test_production_ready.py
(+11 files in other folders)
